--- a/client/views/events.html
+++ b/client/views/events.html
@@ -15,7 +15,7 @@
                     <h1 ng-if="!user"> Sign In or <span> <a href="/register" class="signUpText" >Sign Up</a> </span> To View Events</h1>
                 </div>
                 <table class="table table-striped">
-                    <caption><h3> All Events:</h3></caption>
+                    <caption><h3> All Events:<span><h5>(Date: New - Old)</h5></span></h3></caption>
                     <thead>
                         <tr>
                             <th>Organization</th>
