--- a/client/views/register.html
+++ b/client/views/register.html
@@ -101,7 +101,7 @@
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label for="orgState">State</label>
-                                                <input type="text" class="form-control" placeholder="" ng-model="orgState">
+                                                <input type="text" class="form-control" placeholder="State" ng-model="orgState">
                                             </div>
                                         </div>
                                         <div class="col-md-4">
@@ -119,8 +119,8 @@
             </div>
             <!--footer-->
             <div class="modal-footer">
-                <button type="button " class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button class="btn btn-danger" ng-click="createOrg()">Create Account</button>
+                <button type="button " class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button class="btn btn-success" ng-click="createOrg()">Create Account</button>
             </div>
         </div>
     </div>
@@ -163,8 +163,8 @@
             </div>
             <!--footer-->
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button class="btn btn-danger" ng-click="createVol()">Create Account</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button class="btn btn-success" ng-click="createVol()">Create Account</button>
             </div>
         </div>
     </div>
