--- a/client/views/home.html
+++ b/client/views/home.html
@@ -63,7 +63,7 @@
             <h2 class="wow fadeInUp">Meet the team...</h2>
             <p class="wow fadeInUp" data-wow-delay="0.4">The team that linked up so that they can help others link up.</p>
             <div class="col-md-4 wow fadeInLeft" data-wow-delay="0.6s">
-                <img src="../images/teamImg/ClayTerry.png" class="img-circle" alt="">
+                <img src="../images/teamImg/ClayTerry.jpg" class="img-circle" alt="">
                 <h4>{{personOneName}}</h4>
                 <b> {{personOneTitle}} </b>
                 <p> {{personeOneAbout}} </p>
