--- a/client/views/organizationProfile.html
+++ b/client/views/organizationProfile.html
@@ -20,7 +20,7 @@
           <p>{{ organization.zip }}</p>
           <hr>
           <p>{{ organization.about }}</p>
-          <buttton ng-click="editProfile()" class="btn btn-danger">Edit Profile</buttton>
+          <a ng-href='/edit_organization_profile/{{ organization.id }}'><buttton class="btn btn-danger">Edit Profile</buttton></a>
         </div>
       </div>
       <div class="col-md-9">
@@ -32,8 +32,8 @@
           <h1>{{organization.organizationName}}'s Events </h1>
           <div class="tab-content">
               <div id="upOrg" class="tab-pane fade in active">
-              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#createEventModal">Create new event</button>
-              <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#detailsModal" ng-click="details(o)">See More Details</button>
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createEventModal">Create new event</button>
+              <button type="button" class="btn btn-info" data-toggle="modal" data-target="#detailsModal" ng-click="details(o)">See More Details</button>
               <hr>
               <table class="table table-striped">
                 <thead>
