--- a/client/views/volunteerProfile.html
+++ b/client/views/volunteerProfile.html
@@ -17,8 +17,11 @@
                     <hr>
                     <p class="fa fa-envelope"> {{ volunteer.email }}</p>
                     <br>
+                    <p class="fa fa-map-marker"> {{ volunteer.city }}, {{ volunteer.state }}</p>
+                    <br>
                     <p class="fa fa-user"> {{ volunteer.about }}</p>
                     <br>
+                    <hr>
                     <a ng-href='/edit_volunteer_profile/{{ volunteer.id }}'>
                         <buttton ng-if="user.role=='Volunteer'" class="btn btn-danger">Edit Profile</buttton>
                     </a>
@@ -27,13 +30,13 @@
             <div class="col-md-9">
                 <div class="thumbnail">
                     <ul class="nav nav-tabs ba">
-                        <li role="presentation"><a data-toggle="tab" href="#upcoming">Upcoming Events</a></li>
+                        <li role="presentation"><a data-toggle="tab" href="#upcoming">{{volunteer.name}}'s Upcoming Events</a></li>
                         <li role="presentation"><a data-toggle="tab" data-target="#past">Past Events</a></li>
                     </ul>
                     <div class="tab-content">
                         <div id="upcoming" class="tab-pane fade in active">
-                            <h1>Upcoming Events</h1><button class="btn btn-success btn-sm" data-toggle="modal" data-target="#detailsModal"
-                                ng-click="details(event)">See Details</button>
+                            <h1>Upcoming Events</h1><button class="btn btn-info btn-sm" data-toggle="modal" data-target="#detailsModal"
+                                ng-click="details(event)">See More Details</button>
                             <hr>
                             <table class="table table-striped">
                                 <thead>
@@ -43,7 +46,7 @@
                                         <th>Date</th>
                                         <th>Location</th>
                                         <th>Total Hours</th>
-                                        <th></th>
+                                        <th>Rain Check</th>
                                     </tr>
                                 </thead>
                                 <tbody ng-repeat="u in upcomingEvents">
