LAST MINUTE EDITS

--- a/client/views/organizationProfile.html
+++ b/client/views/organizationProfile.html
@@ -68,7 +68,7 @@
             <div class="caption">
               <h1>Past Events</h1>
               <hr>
-              <table>
+              <table class="table table-striped">
                 <thead>
                   <tr>
                     <th>Organization</th>
