--- a/client/views/editOrganizationProfile.html
+++ b/client/views/editOrganizationProfile.html
@@ -1,18 +1,24 @@
 <main-nav></main-nav>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="container rg-master-1">
     <div class="row">
       
         <div class="col-md-8 col-md-offset-2 text-center">
-                <h1>{{ newOrg.name }}</h1>
+                <h1>{{ newOrg.organizationName }}</h1>
                 <h4>Edit your profile information</h4>
+                <br>
 
         
         <div class="row">
         <div class="col-md-6 text-center">
             <div class="radio">
                 <label for="profile">
-                    <input type="radio" class="custom-control-input" name="profileOptions" value="profile" ng-click="profileClick()" ng-model="editType">
+                    <button type="button" class="btn btn-lg btn-primary" name="profileOptions" value="profile" ng-click="profileClick()" ng-model="editType">
                     <span class="custom-control-input"></span>
                     <span class="custom-control-input">Edit Profile Information</span> 
                 </label>
@@ -21,9 +27,9 @@
         <div class="col-md-6">
             <div class="radio">
                 <label for="pic">
-                    <input type="radio" name="profileOptions" ng-click="picClick()" value="pic" ng-model="editType">
+                    <button type="button" class="btn btn-lg btn-primary" name="profileOptions" ng-click="picClick()" value="pic" ng-model="editType">
                     <span class="custom-control-input"></span>
-                    <span class="custom-control-input">Edit Profile Picture</span>
+                    <span class="custom-control-input">Edit Profile Pic</span>
                 </label>
             </div>
         </div>
