--- a/client/views/register.html
+++ b/client/views/register.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center rg-master">
                 <h1>Sign Up To Link Up</h1>
-                <h3>Which type of account best describe you: </h3>
+                <h3>Which type of account best describes you: </h3>
                 <br/>
                 <!-- beginning of buttons container -->
                 <div class="container rg-master-1">
