final push ya bish

--- a/client/views/editOrganizationProfile.html
+++ b/client/views/editOrganizationProfile.html
@@ -12,7 +12,6 @@
                 <h1>{{ newOrg.organizationName }}</h1>
                 <h4>Edit your profile information</h4>
                 <br>
-
         
         <div class="row">
         <div class="col-md-6 text-center">
@@ -29,9 +28,11 @@
                 <label for="pic">
                     <button type="button" class="btn btn-lg btn-primary" name="profileOptions" ng-click="picClick()" value="pic" ng-model="editType">
                     <span class="custom-control-input"></span>
-                    <span class="custom-control-input">Edit Profile Pic</span>
+                    <span class="custom-control-input">Edit Profile Picture</span>
                 </label>
             </div>
+            <br>
+            <br>
         </div>
         </div>
 
