Last changes before presentation

--- a/client/views/editOrganizationProfile.html
+++ b/client/views/editOrganizationProfile.html
@@ -130,7 +130,7 @@
         <div class="col-md-8 text-center">
             <form ng-submit="updatePic()">
                 <label class="btn btn-danger">
-                    Browse
+                    Browse Images
                 <input type="file" file-model="file.upload" name="profilePic" style="visibility: hidden"> 
                 </label>
                 <button class="btn btn-danger" type="submit">Add Image</button>
