--- a/client/views/editVolunteerProfile.html
+++ b/client/views/editVolunteerProfile.html
@@ -105,8 +105,8 @@
     <div class="row">
         <div class="col-md-8 text-center">
             <form ng-submit="updatePic()">
-                <label class="btn btn-danger">
-                    Browse
+                <label class="btn btn-danger make-small">
+                    Browse Images
                 <input type="file" file-model="file.upload" name="profilePic" style="visibility: hidden"> 
                 </label>
                 <button class="btn btn-danger" type="submit">Add Image</button>
