--- a/client/views/editOrganizationProfile.html
+++ b/client/views/editOrganizationProfile.html
@@ -129,7 +129,7 @@
     <div class="row">
         <div class="col-md-8 text-center">
             <form ng-submit="updatePic()">
-                <label class="btn btn-danger">
+                <label class="btn btn-danger make-small">
                     Browse Images
                 <input type="file" file-model="file.upload" name="profilePic" style="visibility: hidden"> 
                 </label>
